# libninja-allof-example

./: Cargo.toml  README.md  build.rs  petstore.yaml
examples/: create_pets.rs  list_pets.rs  show_pet_by_id.rs
src/: lib.rs  model.rs  request.rs
src/model/: owner_info.rs  pet.rs  pet_health.rs  pet_tag.rs  pets.rs
src/request/: create_pets.rs  list_pets.rs  show_pet_by_id.rs
